index.css
html {
    scroll-behavior: smooth;
  }

  body {
    margin-top: 25px;
    font-family: 'Mukta', sans-serif;    font-size: 100%;
  }

  .col-md-4 {
    margin-bottom: 25px;
  }

  .pictures {
    margin-top: 15px;
    margin-left: 5px;
    margin-right: 5px;
  }

  .col-xl-4 {
    margin-top: 1%;
    position: relative;
    text-align: center;
    height: 300;
  }

  .text {
    margin-top: 11%;
    margin-left: 40%;
    text-align: initial;
  }

  .text-one {
  vertical-align: middle;
  }

  .text-two {
    margin-top: 5%;
    margin-left: 40%;
    text-align: initial;
    font-size: 30px;
  }

  .contact {
    margin-top: 200px;
  }

  .me {
    margin-right: 40%;
    margin-top: 10%;
  }

  .overlay {
    text-align: center;
  }

  .col {
    text-align: center;
    margin-bottom: 3%;
  }

  .centered {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    font-size: 200%;
  }

  .pictures {
    margin-bottom: 1%;
    margin-left: .5%;
    margin-right: .5%;
  }

  .aboutme {
    margin-top: 100px;
    align-content: center;
  }
  .aboutmetext {
    margin-top: 100px;
    align-content:center;
    vertical-align: middle;
    font-size: 30px;
  }

  .portrait {
    width:100%;
  }

  @media only screen and (max-width: 1000px) {
    .text {
      margin-top: 10%;
      margin-right: 10%;
      margin-left: 10%;
    }

    .text-two {
      margin-top: 10%;
      margin-right: 10%;
      margin-left: 10%;

    }

    .contact {
      margin-top: 50px;
    }

    .aboutmetext {
      margin-top: 50px;
      font-size: 40px;
    }


    .me {
      margin-right: 25%;
      margin-left: 25%;
      margin-top: 7%;
      margin-bottom: 15%;
    }

  

    .col-xl-4 {
      margin-bottom: 5%;
    }
    .col-xl-6 {
      margin-bottom: 5%;
    }

    body {
      margin-top: 25px;
      font-family: 'Mukta', sans-serif;    font-size: 200%;
    }

    .navbar-brand {
      margin-top: 25px;
      font-family: 'Mukta', sans-serif;    font-size: 150%;
      margin-left: 40px;
    }



  .navbar-toggler-icon {
    display: inline-block;
    width: 2.5em;
    height: 2.5em;
    vertical-align: middle;
    content: "";
    background: no-repeat center center;
    background-size: 100% 100%;
    margin-right: 40px;
    margin-top: 20px;
}

.navbar-light .navbar-toggler {
  color: rgba(0,0,0,0);
  border-color: rgba(0,0,0,0);
}

.img-fluid {
  max-width: 100%;
  height: auto;
  margin-bottom: 15px;
}


  }
/* Not a fan yet, need to update"
  .hovereffect {
    width: 100%;
    height: 100%;
    float: left;
    overflow: hidden;
    position: relative;
    text-align: center;
    cursor: default;
  }

  .hovereffect .overlay {
    position: absolute;
    overflow: hidden;
    width: 80%;
    height: 80%;
    left: 10%;
    top: 10%;
    border-bottom: 1px solid #FFF;
    border-top: 1px solid #FFF;
    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
    transition: opacity 0.35s, transform 0.35s;
    -webkit-transform: scale(0,1);
    -ms-transform: scale(0,1);
    transform: scale(0,1);
  }

  .hovereffect:hover .overlay {
    opacity: 1;
    filter: alpha(opacity=100);
    -webkit-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
  }

  .hovereffect img {
    display: block;
    position: relative;
    -webkit-transition: all 0.35s;
    transition: all 0.35s;
  }

  .hovereffect:hover img {
    filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="https://www.w3.org/2000/svg"><filter id="filter"><feComponentTransfer color-interpolation-filters="sRGB"><feFuncR type="linear" slope="0.6" /><feFuncG type="linear" slope="0.6" /><feFuncB type="linear" slope="0.6" /></feComponentTransfer></filter></svg>#filter');
    filter: brightness(0.6);
    -webkit-filter: brightness(0.6);
  }

  .hovereffect h2 {
    text-transform: uppercase;
    text-align: center;
    position: relative;
    font-size: 17px;
    background-color: transparent;
    color: #FFF;
    padding: 1em 0;
    opacity: 0;
    filter: alpha(opacity=0);
    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
    transition: opacity 0.35s, transform 0.35s;
    -webkit-transform: translate3d(0,-100%,0);
    transform: translate3d(0,-100%,0);
  }

  .hovereffect a, .hovereffect p {
    color: #FFF;
    padding: 1em 0;
    opacity: 0;
    filter: alpha(opacity=0);
    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
    transition: opacity 0.35s, transform 0.35s;
    -webkit-transform: translate3d(0,100%,0);
    transform: translate3d(0,100%,0);
  }

  .hovereffect:hover a, .hovereffect:hover p, .hovereffect:hover h2 {
    opacity: 1;
    filter: alpha(opacity=100);
    -webkit-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }

*/

